--- a/LightingLink/packages.config
+++ b/LightingLink/packages.config
@@ -1,19 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="hidlibrary" version="3.2.46.0" targetFramework="net45" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net45" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
+  <package id="HidSharp" version="1.5" targetFramework="net45" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="net45" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="Q42.HueApi" version="3.5.2" targetFramework="net45" />
   <package id="Q42.HueApi.ColorConverters" version="3.4.1" targetFramework="net45" />
   <package id="Q42.HueApi.Net" version="3.3.2" targetFramework="net45" />
   <package id="Q42.WinRT.Portable" version="1.2.3.42" targetFramework="net45" />
-  <package id="RGB.NET.Brushes" version="1.0.0" targetFramework="net45" />
-  <package id="RGB.NET.Core" version="1.0.0" targetFramework="net45" />
-  <package id="RGB.NET.Decorators" version="1.0.0" targetFramework="net45" />
-  <package id="RGB.NET.Devices.Asus" version="1.0.0" targetFramework="net45" />
-  <package id="RGB.NET.Devices.Corsair" version="1.0.0" targetFramework="net45" />
-  <package id="RGB.NET.Groups" version="1.0.0" targetFramework="net45" />
+  <package id="RGB.NET.Core" version="0.0.1-CI00007" targetFramework="net45" />
+  <package id="RGB.NET.Devices.Asus" version="0.0.1-CI00007" targetFramework="net45" />
+  <package id="RGB.NET.Devices.Corsair" version="0.0.1-CI00007" targetFramework="net45" />
   <package id="System.Collections" version="4.3.0" targetFramework="net45" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net45" />
@@ -24,7 +21,7 @@
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net45" />
   <package id="System.Linq" version="4.3.0" targetFramework="net45" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net45" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net45" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net45" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net45" />
