--- a/LightingLink/packages.config
+++ b/LightingLink/packages.config
@@ -8,9 +8,36 @@
   <package id="Q42.HueApi.ColorConverters" version="3.4.1" targetFramework="net45" />
   <package id="Q42.HueApi.Net" version="3.3.2" targetFramework="net45" />
   <package id="Q42.WinRT.Portable" version="1.2.3.42" targetFramework="net45" />
-  <package id="RGB.NET.Core" version="0.0.1-CI00007" targetFramework="net45" />
-  <package id="RGB.NET.Devices.Asus" version="0.0.1-CI00007" targetFramework="net45" />
-  <package id="RGB.NET.Devices.Corsair" version="0.0.1-CI00007" targetFramework="net45" />
+  <package id="RGB.NET" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Asus" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Brushes" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.CoolerMaster" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Core" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.Corsair" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Debug" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Decorators" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.Devices" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Devices.Asus" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.Devices.CoolerMaster" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.Devices.Corsair" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.Devices.Debug" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.Devices.Logitech" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.Devices.Novation" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.Devices.Razer" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.DMX" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Groups" version="0.0.1.52" targetFramework="net45" />
+  <package id="RGB.NET.Input.Corsair" version="0.0.1.42" targetFramework="net45" />
+  <package id="RGB.NET.Logitech" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Novation" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Presets" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Razer" version="0.0.1" targetFramework="net45" />
+  <package id="RGB.NET.Resources.Asus" version="0.1.0" targetFramework="net45" />
+  <package id="RGB.NET.Resources.CoolerMaster" version="0.1.0" targetFramework="net45" />
+  <package id="RGB.NET.Resources.Corsair" version="0.1.0" targetFramework="net45" />
+  <package id="RGB.NET.Resources.Logitech" version="0.1.0" targetFramework="net45" />
+  <package id="RGB.NET.Resources.Msi" version="0.1.0" targetFramework="net45" />
+  <package id="RGB.NET.Resources.Novation" version="0.1.0" targetFramework="net45" />
+  <package id="RGB.NET.Resources.Razer" version="0.1.0" targetFramework="net45" />
   <package id="System.Collections" version="4.3.0" targetFramework="net45" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net45" />
