--- a/LightingLink/packages.config
+++ b/LightingLink/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HidSharp" version="1.5" targetFramework="net45" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="net45" />
-  <package id="NETStandard.Library" version="2.0.1" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
-  <package id="Q42.HueApi" version="3.5.2" targetFramework="net45" />
-  <package id="Q42.HueApi.ColorConverters" version="3.4.1" targetFramework="net45" />
+  <package id="BouncyCastle.NetCore" version="1.8.2" targetFramework="net461" />
+  <package id="HidSharp" version="2.0.2" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net461" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Q42.HueApi" version="3.6.3" targetFramework="net45" />
+  <package id="Q42.HueApi.ColorConverters" version="3.6.0" targetFramework="net45" />
+  <package id="Q42.HueApi.Entertainment" version="1.0.0" targetFramework="net461" />
   <package id="Q42.HueApi.Net" version="3.3.2" targetFramework="net45" />
   <package id="Q42.WinRT.Portable" version="1.2.3.42" targetFramework="net45" />
   <package id="RGB.NET" version="0.0.1" targetFramework="net45" />
@@ -45,10 +47,10 @@
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net45" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net45" />
   <package id="System.IO" version="4.3.0" targetFramework="net45" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net45" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Linq" version="4.3.0" targetFramework="net45" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net45" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net45" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net45" />
@@ -65,7 +67,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net45" />
   <package id="System.Threading" version="4.3.0" targetFramework="net45" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net45" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net45" />
 </packages>
